[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/images/playerShip2_green.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.8069, 39 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.2403, 31.0538 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.985185, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.494118, 0, 0, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 1, 0, 1 )

[node name="Player" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -20, 4 )
rotation = 0.959931
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( 20, 6 )
rotation = -0.959931
shape = SubResource( 2 )

[node name="Particles2D2" type="Particles2D" parent="."]
position = Vector2( 0, 37 )
amount = 1500
lifetime = 0.1
randomness = 1.0
local_coords = false
process_material = SubResource( 5 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -30.0
margin_top = 50.0
margin_right = 30.0
margin_bottom = 55.0
custom_styles/fg = SubResource( 6 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegenTimer" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="RegenTimer" to="." method="_on_RegenTimer_timeout"]
